# my-library

./: .env.example  .gitignore  Makefile  diagram.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: books.py  chat.py  libraries.py  shelves.py
backend/app/api/v1/schemas/: book.py  chat.py  library.py  shelf.py
backend/app/config/: database.py  security.py  settings.py
backend/app/domain/entities/: __init__.py  book.py  chat.py  library.py  shelf.py
backend/app/domain/interfaces/: __init__.py  ai_service.py  book_repository.py  chat_repository.py  library_repository.py  shelf_repository.py  user_repository.py
backend/app/infrastructure/ai/: cache.py  embedding_service.py  llm_factory.py  llm_service.py  pg_fulltext_retriever.py  rag_pipeline.py  retriever_factory.py
backend/app/infrastructure/ai/prompts/: __init__.py
backend/app/infrastructure/database/: pgvector_store.py
backend/app/infrastructure/database/models/: __init__.py  (+4 more)
backend/app/infrastructure/ingestion/: langchain_chunker.py  pdf_extractor.py
backend/app/infrastructure/storage/: cloudinary_service.py
backend/app/service/: book_service.py  chat_service.py  ingest_book_service.py  library_service.py  shelf_service.py
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  303c6b28862d_add_name_to_chat_sessions.py  45324e97bccf_drop_chunks_table.py  91e3759ea16c_add_file_url_to_books.py  a2f8c91d3e57_make_file_url_not_null_in_books.py  b1a3f7e20c41_add_langchain_pgvector_tables.py  c3d4e5f6a7b8_add_references_to_chat_messages.py
backend/scripts/: fix_shelf_id_metadata.py
(+91 files in other folders)
